--- a/app/src/main/res/layout/fragment01.xml
+++ b/app/src/main/res/layout/fragment01.xml
@@ -4,11 +4,17 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></WebView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="01"
-        android:textSize="22sp"/>
+        android:textSize="22sp"
+        android:visibility="gone"/>
 
 </LinearLayout>
