完善了代码2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,13 @@
         android:text="底部导航栏采用RadioButton"
         android:textAllCaps="false"/>
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="底部导航栏采用RadioButton（2）"
+        android:textAllCaps="false"/>
+
 
 
 
