--- a/app/src/main/res/layout/fragment01.xml
+++ b/app/src/main/res/layout/fragment01.xml
@@ -5,6 +5,7 @@
               android:orientation="vertical">
 
     <WebView
+
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></WebView>
@@ -15,6 +16,7 @@
         android:gravity="center"
         android:text="01"
         android:textSize="22sp"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        />
 
 </LinearLayout>
